# Infantaria

./: CMakeLists.txt  Makefile  README.md
src/: Application.cpp  forms.cpp  forms.h  utility.cpp  utility.h
src/objects/: forms.cpp  forms.h
src/shaders/: fragment.glsl  shaders.cpp  shaders.h
